[package]
name = "stowaway-derive"
version = "0.1.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MPL-2.0"
description = "A derive macro for stowaway::Stowaway"
repository = "https://github.com/Lucretiel/stowaway-derive"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.7"
syn = "1.0.39"

[dev-dependencies]
stowaway = "2.0.0"
